<resources>
    <string name="app_name">WorkManager</string>
    <string name="havenottoday">Chưa có công việc trong ngày hôm nay</string>
    <string name="choosecanlader">Chọn lịch</string>
    <string name="all">Tất cả</string>
    <string name="meeting">Cuộc họp</string>
    <string name="travel">Du lịch</string>
    <string name="birday">Sinh nhật</string>
    <string name="cafe">Cà phê</string>
    <string name="daily">Hằng ngày</string>
    <string name="difference">Khác</string>
    <string name="wordmanager">Quản lý công việc</string>
    <string name="monday">Thứ hai</string>
    <string name="tuesday">Thứ ba</string>
    <string name="wednesday">Thứ tư</string>
    <string name="thursday">Thứ năm</string>
    <string name="friday">Thứ sáu</string>
    <string name="saturday">Thứ bảy</string>
    <string name="sunday">Chủ nhật</string>
    <string name="nojob">Không có công việc nào</string>
    <string name="delsure">Bạn có chắc chắn muốn xóa tất cả công việc trong danh sách không?</string>
    <string name="yes">Có</string>
    <string name="no">Không</string>
    <string name="notice1">Bạn có đánh dấu tất cả công việc đã hoàn thành không?</string>
    <string name="notice2">Không thể hoàn thành công việc trong tương lai</string>
    <string name="notice3">Không thể hoàn thành công việc trước thời gian bắt đầu</string>
    <string name="addbookmark">Đã thêm vào bookmark</string>
    <string name="delbookmark">Đã xóa khỏi bookmark</string>
    <string name="delonejob">Bạn có muốn xóa công việc này không?</string>
    <string name="today">Hôm nay</string>
    <string name="tomorrow">Hôm sau</string>
    <string name="previous">Hôm qua</string>
    <string name="date">Chọn ngày</string>
    <string name="time">Chọn thời gian</string>
    <string name="subject">Chủ đề</string>
    <string name="content">Nội dung</string>
    <string name="save">Lưu</string>
    <string name="cancel">Bỏ qua</string>
    <string name="edit">Lưu chỉnh sửa</string>
    <string name="delete">Xóa</string>
    <string name="back">Quay lại</string>
    <string name="timeformat1">Sai định dạng thời gian</string>
    <string name="timeformat2">Giờ không được phép lớn hơn 24 hoặc nhỏ hơn 0</string>
    <string name="timeformat3">Phút không được phép lớn hơn 59 hoặc nhỏ hơn 0</string>
    <string name="dateformat1">Ngày tháng không đúng</string>
    <string name="contentWrong">Bạn nhập thiếu dữ liệu</string>
    <string name="addJob">Thêm công việc mới</string>
    <string name="startthanend">Thời gian bắt đầu không được lớn hơn thời gian kết thúc</string>
    <string name="jobdone">Hoàn thành</string>

</resources>
