<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/bg5"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/time"
        android:textSize="20sp"
        android:textColor="@color/maxWhite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />

    <EditText
        android:id="@+id/detail"
        android:layout_width="320dp"
        android:layout_height="145dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:gravity="top"
        android:text="@string/content"
        android:textColor="@color/maxWhite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/time" />

    <Button
        android:id="@+id/button2"
        android:layout_width="74dp"
        android:layout_height="58dp"
        android:layout_marginTop="32dp"
        android:background="@null"
        android:drawableLeft="@drawable/edit"
        android:text="Lưu"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail" />

    <Button
        android:id="@+id/button3"
        android:layout_width="76dp"
        android:layout_height="58dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="32dp"
        android:background="@null"
        android:drawableLeft="@drawable/delete"
        android:text="@string/delete"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/detail" />

    <Button
        android:id="@+id/button4"
        android:layout_width="81dp"
        android:layout_height="57dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="32dp"
        android:background="@null"
        android:drawableLeft="@drawable/undo"
        android:text="@string/back"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/button3"
        app:layout_constraintTop_toBottomOf="@+id/detail" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="76dp"
        android:layout_height="59dp"
        android:layout_marginTop="88dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="140dp"
        android:layout_height="61dp"
        android:layout_marginTop="88dp"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginTop="24dp"
        android:text="Chi tiết công việc"
        android:textColor="@color/colorAccent"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/detail_important"
        android:layout_width="34dp"
        android:layout_height="29dp"
        android:layout_marginEnd="48dp"
        android:layout_marginTop="104dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/important" />
</android.support.constraint.ConstraintLayout>