<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/background_add_2"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/addJob"
        android:textColor="@color/maxWhite"
        android:textSize="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/add_calender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@drawable/calender" />

    <ImageView
        android:id="@+id/add_time_start"
        android:layout_width="59dp"
        android:layout_height="62dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_calender"
        app:srcCompat="@drawable/time" />

    <EditText
        android:id="@+id/show_calender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/date"
        android:textColor="@color/maxWhite"
        android:textColorHint="@color/maxWhite"
        android:inputType="date"
        app:layout_constraintStart_toEndOf="@+id/add_calender"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/show_time_start"
        android:layout_width="105dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="Bắt đầu"
        android:inputType="time"
        android:textColor="@color/maxWhite"
        android:textColorHint="@color/maxWhite"
        app:layout_constraintStart_toEndOf="@+id/add_time_start"
        app:layout_constraintTop_toBottomOf="@+id/show_calender" />

    <EditText
        android:id="@+id/add_content"
        android:layout_width="348dp"
        android:layout_height="179dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="80dp"
        android:ems="10"
        android:gravity="top"
        android:hint="@string/content"
        android:inputType="textPersonName"
        android:textColorHint="@color/maxWhite"
        android:textColor="@color/maxWhite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/show_time_start" />

    <Button
        android:id="@+id/save"
        android:layout_width="94dp"
        android:layout_height="45dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:background="@null"
        android:text="@string/save"
        android:textColor="@color/maxWhite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_content" />

    <Button
        android:id="@+id/cancel"
        android:layout_width="123dp"
        android:layout_height="45dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:background="@null"
        android:text="@string/cancel"
        android:textColor="@color/maxWhite"
        app:layout_constraintStart_toEndOf="@+id/save"
        app:layout_constraintTop_toBottomOf="@+id/add_content" />

    <ImageView
        android:id="@+id/add_time_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toEndOf="@+id/show_time_start"
        app:layout_constraintTop_toBottomOf="@+id/show_calender"
        app:srcCompat="@drawable/time" />

    <EditText
        android:id="@+id/show_time_end"
        android:layout_width="105dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="Kết thúc"
        android:inputType="time"
        android:textColor="@color/maxWhite"
        android:textColorHint="@color/maxWhite"
        app:layout_constraintStart_toEndOf="@+id/add_time_end"
        app:layout_constraintTop_toBottomOf="@+id/show_calender" />

    <Spinner
        android:id="@+id/item_subject"
        android:layout_width="151dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toEndOf="@+id/imagesub"
        app:layout_constraintTop_toBottomOf="@+id/show_time_start" />

    <ImageView
        android:id="@+id/imagesub"
        android:layout_width="72dp"
        android:layout_height="73dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_time_start"
        app:srcCompat="@drawable/meeting" />

    <ImageView
        android:id="@+id/add_important"
        android:layout_width="41dp"
        android:layout_height="34dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toEndOf="@+id/cancel"
        app:layout_constraintTop_toBottomOf="@+id/add_content"
        app:srcCompat="@drawable/important" />

</android.support.constraint.ConstraintLayout>